<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_above="@+id/view2"
		android:padding="10dp">
		<RelativeLayout
			android:orientation="vertical" 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<TextView android:textAppearance="?android:attr/textAppearanceLarge"
				android:layout_width="wrap_content" android:id="@+id/textView15"
				android:text="@string/personal_diet_info" android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
				android:layout_centerHorizontal="true"></TextView>
			<TableLayout android:layout_height="wrap_content"
				android:id="@+id/TableLayout1" android:background="@drawable/diet_info_border"
				android:layout_below="@+id/textView15"
				android:layout_centerHorizontal="true" android:paddingBottom="10dp"
				android:paddingLeft="10dp" android:paddingRight="10dp"
				android:paddingTop="2dp" android:layout_marginTop="12dp"
				android:layout_width="fill_parent" android:stretchColumns="0,1">
				<TextView android:id="@+id/textView18"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/general_text" android:textStyle="bold"></TextView>
				<TableRow android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<TextView android:id="@+id/textView1"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/age_text" android:layout_gravity="right"></TextView>
					<TextView android:text="TextView" android:id="@+id/textView2"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_marginLeft="5dp" android:layout_gravity="left"></TextView>
				</TableRow>
				<TableRow android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<TextView android:id="@+id/textView3"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/sex_text" android:layout_gravity="right"></TextView>
					<TextView android:text="TextView" android:id="@+id/textView4"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_marginLeft="5dp" android:layout_gravity="left"></TextView>
				</TableRow>
				<TableRow android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<TextView android:id="@+id/textView5"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/heigth_text" android:layout_gravity="right"></TextView>
					<TextView android:text="TextView" android:id="@+id/textView6"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_marginLeft="5dp" android:layout_gravity="left"></TextView>
				</TableRow>
				<TableRow android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<TextView android:id="@+id/textView7"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="right" android:text="@string/current_weight_text"></TextView>
					<TextView android:text="TextView" android:id="@+id/textView8"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_marginLeft="5dp" android:layout_gravity="left"></TextView>
				</TableRow>
				<TableRow android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<TextView android:id="@+id/textView9"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="right" android:text="@string/desired_weight_text"></TextView>
					<TextView android:text="TextView" android:id="@+id/textView10"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_marginLeft="5dp" android:layout_gravity="left"></TextView>
				</TableRow>
				<TableRow android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<TextView android:id="@+id/textView11"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/last_weight" android:layout_gravity="right"></TextView>
					<TextView android:text="TextView" android:id="@+id/textView12"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_marginLeft="5dp" android:layout_gravity="left"></TextView>
				</TableRow>
				<TableRow android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/textView17"
						android:text="@string/daily_activity_text" android:layout_gravity="right"></TextView>
					<TextView android:text="TextView" android:id="@+id/textView16"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_marginLeft="5dp" android:layout_gravity="left"></TextView>
				</TableRow>
				<TableRow android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/textView34"
						android:text="@string/bmi_text" android:layout_gravity="right"></TextView>
					<TextView android:text="TextView" android:id="@+id/textView28"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_marginLeft="5dp" android:layout_gravity="left"></TextView>
				</TableRow>
			</TableLayout>
			<TableLayout android:paddingRight="10dp"
				android:paddingBottom="10dp" android:layout_height="wrap_content"
				android:id="@+id/tableLayout2" android:background="@drawable/diet_info_border"
				android:paddingLeft="10dp" android:layout_centerHorizontal="true"
				android:layout_marginBottom="20dp" android:layout_below="@+id/TableLayout1"
				android:layout_marginTop="10dp" android:paddingTop="2dp"
				android:layout_width="fill_parent" android:stretchColumns="0,1">
				<TextView android:layout_height="wrap_content"
					android:textStyle="bold" android:id="@+id/textView27" android:text="@string/times_text"
					android:layout_width="wrap_content"></TextView>
				<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow9"
					android:layout_width="wrap_content">
					<TextView android:layout_height="wrap_content" android:id="@+id/textView19"
						android:layout_width="wrap_content" android:text="@string/usual_wake_up_text"
						android:layout_gravity="right"></TextView>
					<TextView android:layout_height="wrap_content" android:id="@+id/textView20"
						android:text="TextView" android:layout_width="wrap_content"
						android:layout_gravity="left" android:layout_marginLeft="5dp"></TextView>
				</TableRow>
				<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow10"
					android:layout_width="wrap_content">
					<TextView android:layout_height="wrap_content" android:id="@+id/textView21"
						android:layout_width="wrap_content" android:text="@string/on_weekends_text"
						android:layout_gravity="right"></TextView>
					<TextView android:layout_height="wrap_content" android:id="@+id/textView22"
						android:text="TextView" android:layout_width="wrap_content"
						android:layout_gravity="left" android:layout_marginLeft="5dp"></TextView>
				</TableRow>
				<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow11"
					android:layout_width="wrap_content">
					<TextView android:layout_height="wrap_content" android:id="@+id/textView23"
						android:layout_width="wrap_content" android:text="@string/usual_sleep_time_text"
						android:layout_gravity="right"></TextView>
					<TextView android:layout_height="wrap_content" android:id="@+id/textView24"
						android:text="TextView" android:layout_width="wrap_content"
						android:layout_gravity="left" android:layout_marginLeft="5dp"></TextView>
				</TableRow>
				<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow12"
					android:layout_width="wrap_content">
					<TextView android:layout_height="wrap_content" android:id="@+id/textView25"
						android:layout_width="wrap_content" android:text="@string/on_weekends_text"
						android:layout_gravity="right"></TextView>
					<TextView android:layout_height="wrap_content" android:id="@+id/textView26"
						android:text="TextView" android:layout_width="wrap_content"
						android:layout_gravity="left" android:layout_marginLeft="5dp"></TextView>
				</TableRow>
			</TableLayout>

		</RelativeLayout>
	</ScrollView>
	<View android:id="@+id/view1" android:layout_width="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true" android:layout_height="36dp"
		android:background="@color/c82"></View>
	<View android:id="@+id/view2" android:layout_width="wrap_content"
		android:layout_above="@+id/view1" android:layout_alignParentLeft="true"
		android:layout_height="44dp" android:background="@color/cad"></View>
	<Button android:text="@string/change_user_info_text"
		android:layout_width="wrap_content" android:id="@+id/button1" style="@style/ButtonBlack"
		android:layout_height="wrap_content" android:layout_alignBottom="@+id/view1"
		android:layout_alignRight="@+id/view1" android:layout_marginBottom="18dp"
		android:layout_marginRight="15dp"></Button>
	<Button android:layout_width="wrap_content" android:id="@+id/button2"
		android:layout_height="wrap_content" android:layout_alignBaseline="@+id/button1"
		android:layout_alignBottom="@+id/button1" android:layout_toLeftOf="@+id/button1"
		style="@style/ButtonBlack" android:layout_marginRight="10dp"
		android:text="@string/change_times_text"></Button>
</RelativeLayout>
